Move webextension from webpack to rollup

--- a/webextension/resources/chromium.manifest.json
+++ b/webextension/resources/chromium.manifest.json
@@ -11,12 +11,6 @@
     },
     "permissions": [
         "tabs",
-        "nativeMessaging",
-        "history"
-    ],
-    "browser_specific_settings": {
-        "gecko": {
-            "id": "searchproviderconnector@searchproviderconnector"
-        }
-    }
+        "nativeMessaging"
+    ]
 }
