--- a/webextension/package.json
+++ b/webextension/package.json
@@ -4,18 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "watch": "webpack --config webpack/webpack.dev.js --watch",
-    "build": "webpack --config webpack/webpack.prod.js",
+    "watch": "rollup --config rollup.config.js --watch",
+    "build": "rollup --config rollup.config.js",
     "clean": "rm -rf dist"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^8.3.0",
     "@types/chrome": "^0.0.171",
-    "copy-webpack-plugin": "^10.2.0",
     "eslint": "^8.5.0",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.4",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-merge": "^5.8.0"
+    "rollup": "^2.62.0",
+    "rollup-plugin-copy": "^3.4.0",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.4"
   }
 }
