--- a/webextension/tsconfig.json
+++ b/webextension/tsconfig.json
@@ -1,17 +1,24 @@
 {
   "compilerOptions": {
-      "strict": true,
-      "module": "commonjs",
-      "target": "es6",
-      "esModuleInterop": true,
-      "sourceMap": false,
-      "rootDir": "src",
-      "outDir": "dist/js",
-      "noEmitOnError": true,
-      "jsx": "react",
-      "lib": [ "es6" ,"dom"],
-      "typeRoots": [ "node_modules/@types" ],
-      "types": ["@types/chrome"],
-      "noFallthroughCasesInSwitch": true,
+    "strict": true,
+    "module": "es6",
+    "target": "es6",
+    "esModuleInterop": true,
+    "sourceMap": false,
+    "rootDir": "src",
+    "outDir": "resources/js",
+    "noEmitOnError": true,
+    "jsx": "react",
+    "lib": [
+      "es6",
+      "dom"
+    ],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "types": [
+      "@types/chrome"
+    ],
+    "noFallthroughCasesInSwitch": true,
   }
 }
