Change domain name

--- a/connector/meson.build
+++ b/connector/meson.build
@@ -1,14 +1,16 @@
-project('searchprovider-connector', 'rust',
+project('tabsearchproviderconnector', 'rust',
           version: '0.1.0',
     meson_version: '>= 0.59.0',
   default_options: [ 'warning_level=2',
                    ],
 )
 prefix = get_option('prefix')
+libdir = prefix / get_option('libdir')
 bindir = prefix / get_option('bindir')
 datadir = prefix / get_option('datadir')
-exeName = meson.project_name()
-base_id = 'org.me'
+
+domain_name = 'com.github.harshadgavali'
+app_id = '@0@.@1@'.format(domain_name, meson.project_name())
 
 cargo_sources = files(
   'Cargo.toml',
@@ -16,4 +18,4 @@ cargo_sources = files(
 )
 
 subdir('src')
-subdir('webextension')
+subdir('manifests')
