--- a/webextension/resources/chromium.manifest.json
+++ b/webextension/resources/chromium.manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 2,
-    "name": "Chromium Tab SearchProvider",
-    "description": "Chromium Tab SearchProvider",
-    "version": "1.0",
+    "name": "Tab search provider for GNOME",
+    "description": "Tab search provider for GNOME Shell",
+    "version": "1.0.1",
     "background": {
         "scripts": [
             "background.js"
