--- a/connector/manifests/meson.build
+++ b/connector/manifests/meson.build
@@ -1,5 +1,11 @@
+release_bindir = bindir
+if get_option('release-bindir') != ''
+	release_bindir = get_option('release-bindir')
+endif
+
 subdir('chrome')
 subdir('firefox')
+
 if get_option('flatpak-chromium')
     subdir('flatpak-chromium')
 endif
