Update workflow paths value

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,9 @@ name: Connector CI
 on:
   push:
     branches:
-      - "main"
+      - main
     paths:
-      - "connector"
+      - "connector/**"
 
 jobs:
   Build:
