--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,33 +20,33 @@ jobs:
           echo "::set-output name=filename::'gnome-tabsearchprovider-connector.${GITHUB_REF#refs/*/}.zip'"
 
       - name: Clippy
-        working-directory: ${{ env.workking-directory }}
+        working-directory: ${{ env.working-directory }}
         run: |
           cargo clippy -- -D warnings
 
       - name: Build
-        working-directory: ${{ env.workking-directory }}
+        working-directory: ${{ env.working-directory }}
         run: |
           export GIT_HEAD_SHA=$(git rev-parse HEAD)
           meson --prefix=$PWD/dist build -Dbuildtype=Release
           ninja -C build install
 
       - name: Create Zip
-        working-directory: ${{ env.workking-directory }}
+        working-directory: ${{ env.working-directory }}
         run: |
           zip -r "${{ steps.zipName.outputs.filename }}" zip
 
       - name: Upload archive artifact
         uses: actions/upload-artifact@v2
         with:
-          working-directory: ${{ env.workking-directory }}
+          working-directory: ${{ env.working-directory }}
           name: ${{ steps.zipName.outputs.filename }}
           path: ${{ steps.zipName.outputs.filename }}
 
       - name: Automatic Releases
         uses: marvinpinto/action-automatic-releases@v1.2.1
         with:
-          working-directory: ${{ env.workking-directory }}
+          working-directory: ${{ env.working-directory }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           prerelease: false
           automatic_release_tag: ${{ steps.zipName.outputs.tagname }}
