remove paths filter for ci temporaraly

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-    paths:
-      - "connector/**"
+    # paths:
+    #   - "connector/**"
 
 jobs:
   Build:
