--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - github-ci
     # paths:
     #   - "connector/**"
 
@@ -18,34 +19,34 @@ jobs:
         id: zipName
         run: |
           echo "::set-output name=tagname::${GITHUB_REF#refs/*/}"
-          echo "::set-output name=filename::'gnome-tabsearchprovider-connector.${GITHUB_REF#refs/*/}.zip'"
+          echo "::set-output name=filename::gnome-tabsearchprovider-connector.$(date --iso-8601).$(git rev-parse --short HEAD).zip"
+
+      - name: Install dependencies
+        run: |
+          python3 -m pip install --user meson ninja
 
       - name: Clippy
         working-directory: ${{ env.working-directory }}
         run: |
+          export CARGO_TARGET_DIR=build/target
+          export CARGO_HOME=build/cargo-home
           cargo clippy -- -D warnings
-
-      - name: Install dependencies
-        run: |
-          sudo apt update
-          sudo apt install -y meson ninja-build
 
       - name: Build
         working-directory: ${{ env.working-directory }}
         run: |
           export GIT_HEAD_SHA=$(git rev-parse HEAD)
-          meson --prefix=$PWD/dist --buildtype=release build
+          meson --prefix=$PWD/dist/usr --sysconfdir=$PWD/dist/etc --buildtype=release build
           ninja -C build install
 
       - name: Create Zip
         working-directory: ${{ env.working-directory }}
         run: |
           cd dist
-          zip -r "${{ steps.zipName.outputs.filename }}" .
+          zip -r ${{ steps.zipName.outputs.filename }} .
 
       - name: Upload archive artifact
         uses: actions/upload-artifact@v2
         with:
-          working-directory: ${{ env.working-directory }}
           name: ${{ steps.zipName.outputs.filename }}
-          path: ${{ steps.zipName.outputs.filename }}
+          path: ${{ env.working-directory }}/dist/${{ steps.zipName.outputs.filename }}
