remove CARGO_HOME variable

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,14 +33,13 @@ jobs:
         working-directory: ${{ env.working-directory }}
         run: |
           export CARGO_TARGET_DIR=build/target
-          export CARGO_HOME=build/cargo-home
           cargo clippy -- -D warnings
 
       - name: Build
         working-directory: ${{ env.working-directory }}
         run: |
           export GIT_HEAD_SHA=$(git rev-parse HEAD)
-          meson --prefix=$PWD/dist/usr --sysconfdir=$PWD/dist/etc --buildtype=release build
+          meson --prefix=$PWD/dist/usr --sysconfdir=$PWD/dist/etc build
           ninja -C build install
 
       - name: Create Zip
