--- a/connector/Cargo.toml
+++ b/connector/Cargo.toml
@@ -12,3 +12,5 @@ byteorder = "^1.4.3"
 serde_json = "^1.0.75"
 serde_repr = "^0.1.7"
 serde = { version = "^1.0.133", features = ["derive"] }
+event-listener = "2.5.3"
+rand = "0.8.5"
