--- a/connector/manifests/flatpak-chromium/manifest.json.in
+++ b/connector/manifests/flatpak-chromium/manifest.json.in
@@ -6,6 +6,7 @@
   "allowed_origins": [
     "chrome-extension://pjidkdbbdemngigldodbdpkpggmgilnl/",
     "chrome-extension://oemddknfonbdjbdggoopmapgojnjdmjc/",
-    "chrome-extension://fjfcbcgllgpjkemliimiamjcefabdkik/"
+    "chrome-extension://fjfcbcgllgpjkemliimiamjcefabdkik/",
+    "chrome-extension://naeoidaaofeamodpkdjcipncgpgmnljk/"
   ]
 }
